// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filter Component should render a Filter component 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Filter
    handleFilter={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="input-group-prepend"
>
          <span
                    className="input-group-text"
          >
                    <img
                              alt="Search"
                              src="search.svg"
                    />
          </span>
</div>,
        <input
          className="form-control filter"
          onChange={[Function]}
          placeholder="Search"
          type="text"
          value=""
/>,
      ],
      "className": "input-group",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <span
            className="input-group-text"
>
            <img
                        alt="Search"
                        src="search.svg"
            />
</span>,
          "className": "input-group-prepend",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <img
              alt="Search"
              src="search.svg"
/>,
            "className": "input-group-text",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "Search",
              "src": "search.svg",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          "type": "span",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "form-control filter",
          "onChange": [Function],
          "placeholder": "Search",
          "type": "text",
          "value": "",
        },
        "ref": null,
        "rendered": null,
        "type": "input",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="input-group-prepend"
>
            <span
                        className="input-group-text"
            >
                        <img
                                    alt="Search"
                                    src="search.svg"
                        />
            </span>
</div>,
          <input
            className="form-control filter"
            onChange={[Function]}
            placeholder="Search"
            type="text"
            value=""
/>,
        ],
        "className": "input-group",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <span
              className="input-group-text"
>
              <img
                            alt="Search"
                            src="search.svg"
              />
</span>,
            "className": "input-group-prepend",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <img
                alt="Search"
                src="search.svg"
/>,
              "className": "input-group-text",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "Search",
                "src": "search.svg",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            "type": "span",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "form-control filter",
            "onChange": [Function],
            "placeholder": "Search",
            "type": "text",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Filter Component should render a Filter component that can handle change 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Filter
    handleFilter={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="input-group-prepend"
>
          <span
                    className="input-group-text"
          >
                    <img
                              alt="Search"
                              src="search.svg"
                    />
          </span>
</div>,
        <input
          className="form-control filter"
          onChange={[Function]}
          placeholder="Search"
          type="text"
          value="test"
/>,
      ],
      "className": "input-group",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <span
            className="input-group-text"
>
            <img
                        alt="Search"
                        src="search.svg"
            />
</span>,
          "className": "input-group-prepend",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <img
              alt="Search"
              src="search.svg"
/>,
            "className": "input-group-text",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "Search",
              "src": "search.svg",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          "type": "span",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "form-control filter",
          "onChange": [Function],
          "placeholder": "Search",
          "type": "text",
          "value": "test",
        },
        "ref": null,
        "rendered": null,
        "type": "input",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="input-group-prepend"
>
            <span
                        className="input-group-text"
            >
                        <img
                                    alt="Search"
                                    src="search.svg"
                        />
            </span>
</div>,
          <input
            className="form-control filter"
            onChange={[Function]}
            placeholder="Search"
            type="text"
            value="test"
/>,
        ],
        "className": "input-group",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <span
              className="input-group-text"
>
              <img
                            alt="Search"
                            src="search.svg"
              />
</span>,
            "className": "input-group-prepend",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <img
                alt="Search"
                src="search.svg"
/>,
              "className": "input-group-text",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "Search",
                "src": "search.svg",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            "type": "span",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "form-control filter",
            "onChange": [Function],
            "placeholder": "Search",
            "type": "text",
            "value": "test",
          },
          "ref": null,
          "rendered": null,
          "type": "input",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
